--- a/.env.example
+++ b/.env.example
@@ -57,3 +57,8 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+
+WEATHER_API_URL_DATA=https://api.openweathermap.org/data/2.5/weather
+WEATHER_API_URL_DAILY=https://api.openweathermap.org/data/2.5/forecast
+WEATHER_API_KEY=
