--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "vite": "^5.0.0"
     },
     "dependencies": {
+        "dayjs": "^1.11.11",
         "react-toastify": "^10.0.5"
     }
 }
