Add autocomplete for cities

--- a/.env.example
+++ b/.env.example
@@ -62,3 +62,5 @@ VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 WEATHER_API_URL_DATA=https://api.openweathermap.org/data/2.5/weather
 WEATHER_API_URL_DAILY=https://api.openweathermap.org/data/2.5/onecall
 WEATHER_API_KEY=
+
+COUNTRIESNOW_URL_API=https://countriesnow.space/api/v0.1/countries
