--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     },
     "dependencies": {
         "dayjs": "^1.11.11",
+        "primereact": "^10.7.0",
         "react-toastify": "^10.0.5"
     }
 }
